--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -15,16 +15,34 @@
 }
 
 .example-sidenav-content {
-  display: flex;
+  // display: flex;
+  margin: 30px;
+  position: absolute;
   height: 100%;
-  align-items: center;
-  justify-content: center;
+  width: 100%;
+  // overflow-y: hidden;
+  // align-items: center;
+  // justify-content: center;
 }
 
 .example-sidenav {
-  padding: 20px;
+  width: 15%;
+  padding: 5px;
 }
 
 .position-fixed{
   position: fixed
+}
+
+mat-menu {
+  height: 100px;
+  width: 100px;
+  margin: 20px;
+}
+
+mat-form-field {
+  display: flex;
+  flex-direction: row-reverse;
+  width: 40%;
+  height: 70%
 }
