--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -17,9 +17,9 @@
 .example-sidenav-content {
   // display: flex;
   margin: 30px;
-  position: absolute;
+  // position: absolute;
   height: 100%;
-  width: 100%;
+  // width: 100%;
   // overflow-y: hidden;
   // align-items: center;
   // justify-content: center;
