--- a/src/app/task-list/task-list.component.scss
+++ b/src/app/task-list/task-list.component.scss
@@ -1,23 +1,28 @@
 .example-container {
-  width: 400px;
+  width: 100%;
   max-width: 100%;
   margin: 0 25px 25px 0;
   display: inline-block;
   vertical-align: top;
+
+  .chip-box {
+    margin-bottom: 15px;
+  }
 }
 
 .example-list {
-  border: solid 1px #ccc;
+  // border: solid 1px #ccc;
   min-height: 60px;
-  background: white;
-  border-radius: 4px;
+  // background: white;
+  // border-radius: 4px;
   overflow: hidden;
   display: block;
 }
 
 .example-box {
-  padding: 20px 10px;
-  border-bottom: solid 1px #ccc;
+  // border-radius: 4px;
+  width: 100%;
+  // border: solid 1px #ccc;
   color: rgba(0, 0, 0, 0.87);
   display: flex;
   flex-direction: row;
@@ -25,25 +30,45 @@
   justify-content: space-between;
   box-sizing: border-box;
   cursor: move;
-  background: white;
+  // background: white;
   font-size: 14px;
 
-  p {
-    padding: 0;
-    cursor: pointer;
+  app-task {
+    width: 100%;
+    cursor:auto;
+  }
+
+  .example-handle {
+    visibility: hidden;
+  }
+
+  .task-item {
+    width:100%;
+    cursor:pointer;
+  }
+}
+
+.example-box:hover {
+  .example-handle {
+    visibility: visible;
+  }
+
+  .task-item {
+    background-color: rgba(0, 0, 0, 0.04);
   }
 }
 
 .cdk-drag-preview {
   box-sizing: border-box;
   border-radius: 4px;
+  background-color: white;
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
               0 8px 10px 1px rgba(0, 0, 0, 0.14),
               0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
 
 .cdk-drag-placeholder {
-  opacity: 0;
+  opacity: 1;
 }
 
 .cdk-drag-animating {
