--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -77,7 +77,7 @@
     }}</mat-icon>
   </button>
   <mat-divider></mat-divider>
-  <button mat-menu-item>
+  <button mat-menu-item (click)="logout()">
     Logout
     <mat-icon class="material-symbols-outlined">logout</mat-icon>
   </button>
