--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,1 +1,97 @@
-<button mat-button (click)="loginWithGoogle()">Sign in with google.</button>
+<div>
+  <div class="signin">
+    <!-- <img
+
+      width="300px"
+      alt="Google sign-in"
+      src="https://onymos.com/wp-content/uploads/2020/10/google-signin-button.png"
+    /> -->
+
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      xmlns:xlink="http://www.w3.org/1999/xlink"
+      version="1.1"
+      id="katman_1"
+      x="0px"
+      y="0px"
+      viewBox="0 0 1800 1800"
+      xml:space="preserve"
+    >
+      <style type="text/css">
+        .st0 {
+          fill-rule: evenodd;
+          clip-rule: evenodd;
+          fill: #e3ecf5;
+        }
+        .st1 {
+          fill: #ffffff;
+          stroke: #c7c6c6;
+          stroke-width: 0.8678;
+          stroke-miterlimit: 10;
+        }
+        .st2 {
+          fill: #020203;
+        }
+        .st3 {
+          font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+            Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+            sans-serif;
+        }
+        .st4 {
+          font-size: 67.077px;
+        }
+        .st5 {
+          fill: #4877bb;
+        }
+        .st6 {
+          fill: #21a849;
+        }
+        .st7 {
+          fill: #fbba10;
+        }
+        .st8 {
+          fill: #e73830;
+        }
+      </style>
+
+      <g xmlns="http://www.w3.org/2000/svg" (click)="loginWithGoogle()">
+        <g>
+          <path
+            class="st1"
+            d="M1541.3,947H258.7c-31.3,0-56.7-25.4-56.7-56.7V789.9c0-31.3,25.4-56.7,56.7-56.7l1282.6,0    c31.3,0,56.7,25.4,56.7,56.7v100.4C1598,921.6,1572.6,947,1541.3,947z"
+          />
+          <g>
+            <text
+              transform="matrix(1 0 0 1 645.688 861.3538)"
+              class="st2 st3 st4"
+            >
+              Sign in with Google
+            </text>
+          </g>
+          <g>
+            <path
+              class="st5"
+              d="M363.5,841.4c0-4.5-0.4-7.8-1.2-11.3h-51.8v20.5h30.4c-0.6,5.1-3.9,12.7-11.3,17.9l-0.1,0.7l16.4,12.7     l1.1,0.1C357.5,872.4,363.5,858.2,363.5,841.4"
+            />
+            <path
+              class="st6"
+              d="M310.5,895.4c14.9,0,27.4-4.9,36.5-13.4l-17.4-13.5c-4.7,3.2-10.9,5.5-19.1,5.5c-14.6,0-27-9.6-31.4-22.9     l-0.6,0.1l-17,13.2l-0.2,0.6C270.3,883,289,895.4,310.5,895.4"
+            />
+            <path
+              class="st7"
+              d="M279.1,851.1c-1.2-3.4-1.8-7.1-1.8-10.9c0-3.8,0.7-7.5,1.8-10.9l0-0.7l-17.2-13.4l-0.6,0.3     c-3.7,7.5-5.9,15.9-5.9,24.8c0,8.9,2.1,17.3,5.9,24.8L279.1,851.1"
+            />
+            <path
+              class="st8"
+              d="M310.5,806.4c10.4,0,17.3,4.5,21.3,8.2l15.6-15.2c-9.6-8.9-22-14.3-36.9-14.3c-21.6,0-40.2,12.4-49.3,30.4     l17.8,13.9C283.6,816,295.9,806.4,310.5,806.4"
+            />
+          </g>
+        </g>
+      </g>
+    </svg>
+  </div>
+
+  <div class="quotes">
+    <p>{{ quote }}</p>
+  </div>
+</div>
